# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-909697a60dd63e7f4f836c32400eb5769e2bbc120a36585ebbe5cf5b069d271a.json  query-b2bd892fac026ca661ae7a718932af642b62e7f2f5d0c00f15bde7c656a9b0f7.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241121185631_create_subscriptions_table.sql  20250109110558_make_status_not_null_in_subscriptions.sql  20250109111759_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/.github/workflows/: general.yml
zero2prod/src/: main.rs
