[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could specify a library name using the 'name' field. If unspecified
# cargo will default to 'package.name'
path = "src/lib.rs"

# double square brackets is an array in TOML syntax.
# We can only have one library in a project, but we can have multiple binaries!
# if we need to manage multiple binaries in the same repository,
# have a look at the workspace feature - will be covered later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
