[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could specify a library name using the 'name' field. If unspecified
# cargo will default to 'package.name'
path = "src/lib.rs"

# double square brackets is an array in TOML syntax.
# We can only have one library in a project, but we can have multiple binaries!
# if we need to manage multiple binaries in the same repository,
# have a look at the workspace feature - will be covered later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
validator = "0.19.0"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
# we need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.8.0"
fake = "3.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.6.2"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
